--- a/package.json
+++ b/package.json
@@ -1,8 +1,24 @@
 {
   "name": "vincit-pre-assignment",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
+  "resolutions": {
+    "browserslist": "^4.16.5",
+    "glob-parent": "^5.1.2",
+    "nth-check": "^2.0.1",
+    "ansi-regex": "^5.0.1",
+    "immer": "^9.0.6"
+  },
   "dependencies": {
+    "node-sass": "^6.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
+    "web-vitals": "^1.1.2"
+  },
+  "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -10,13 +26,14 @@
     "@types/node": "^12.20.37",
     "@types/react": "^17.0.35",
     "@types/react-dom": "^17.0.11",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "^4.5.2",
-    "web-vitals": "^1.1.2"
+    "ansi-regex": "^6.0.1",
+    "browserslist": "^4.18.1",
+    "glob-parent": "^6.0.2",
+    "immer": "^9.0.6",
+    "nth-check": "^2.0.1"
   },
   "scripts": {
+    "preinstall": "npx npm-force-resolutions",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
